--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
   "moduleId": "theme",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "Basic classes and services for theming components.",
   "dependencies": {
+    "lodash.merge": "^4.6.0"
   },
   "peerDependencies": {
     "@angular/core": "^4.0.1",
