--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,8 @@
 {
-  "COMMENT": "THIS FILE IS JUST USED FOR THE EDITOR. NOT FOR THE BUILD!!!",
+  "COMMENT": "THIS FILE IS JUST USED FOR THE EDITOR. NOT FOR THE ACTUAL BUILD!!!",
   "compilerOptions": {
-    "baseUrl": "./lib",
     "experimentalDecorators": true,
     "moduleResolution": "node",
-    "rootDir": "./lib",
     "lib": ["es2015", "dom"],
     "skipLibCheck": true,
     "types": []
