--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "moduleId": "theme",
-  "version": "1.2.11",
-  "description": "Basic classes and services for theming components.",
+  "version": "1.2.12",
+  "description": "Basic classes and services for themeing components.",
   "dependencies": {
   },
   "devDependencies": {
