--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,21 @@
 {
-  "COMMENT": "THIS FILE IS JUST USED FOR THE EDITOR. NOT FOR THE ACTUAL BUILD!!!",
+  "COMMENT": "ONLY USED FOR EDITOR!",
+  "compileOnSave": false,
   "compilerOptions": {
-    "experimentalDecorators": true,
+    "outDir": "./build/out-tsc",
+    "baseUrl": "src",
+    "sourceMap": true,
+    "declaration": false,
     "moduleResolution": "node",
-    "lib": ["es2015", "dom"],
-    "skipLibCheck": true,
-    "types": []
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "target": "es5",
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "lib": [
+      "es2016",
+      "dom"
+    ]
   }
 }
