--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "COMMENT": "THIS FILE WILL BE PARSED DURING BUILD. IT IS NOT THE ACTUAL PACKAGE FILE PUSHE TO NPMJS!",
   "name": "@cloukit/theme",
   "moduleId": "theme",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "description": "Basic classes and services for themeing components.",
   "license": "MIT",
   "author": "codelcou.io",
@@ -12,18 +12,20 @@
   },
   "scripts": {
     "build": "node ./node_modules/@cloukit/library-build-chain/build.js",
-    "watch": "node ./node_modules/@cloukit/library-build-chain/build.js --watch"
+    "build:demo": "node ./node_modules/@cloukit/library-build-chain/build.js --demo",
+    "start:demo": "node ./node_modules/@cloukit/library-build-chain/build.js --demo --run",
+    "watch": "node ./node_modules/@cloukit/library-build-chain/build.js --watch",
+    "test": "echo \"ok\""
   },
   "dependencies": {
   },
   "devDependencies": {
-    "@cloukit/library-build-chain": "1.3.0"
+    "@cloukit/library-build-chain": "1.4.2"
   },
   "peerDependencies": {
-    "@angular/common": "^4.0.1",
-    "@angular/core": "^4.0.1",
-    "@angular/platform-browser": "^4.0.1",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "@angular/common": ">=4.0.0",
+    "@angular/core": ">=4.0.0",
+    "rxjs": ">=5.0.0",
+    "zone.js": ">=0.8.0"
   }
 }
